TAG: loadadmin-tr7106-BP
DATE: 8/17/2012
STAFF: marka
CHANGES: loadadmin-tr7106-BP

TAG: loadadmin-5-0-1-1
DATE: 7/9/2012
STAFF: dbm
RELEASE:
CHANGES:
1) prod/saturdaytasks.csh: remove regeneron and norcomm targeted allele loads
2) prod/fridaytasks.csh: comment out DBCC

TAG: loadadmin-5-0-0-10
DATE: 5/8/2012
STAFF: dbm
RELEASE:
CHANGES:
1) prod/dailytasks.csh: don't need to set FLAG_BACKUP_READY for public/robot
2) robot/robotRelease.csh: fix bug where SET_INACTIVE_ROBOT was used instead
                           of SET_INACTIVE_BOT

TAG: loadadmin-5-0-0-9
DATE: 4/30/2012
STAFF: dbm
RELEASE:
CHANGES:
1) public/restartPublicFewi.csh, robot/restartRobotFewi.csh: Send stdout and
   stderr to /dev/null when calling restartFewi script. Otherwise, a defunct
   process is left hanging under Linux and no cron mail is received from the
   JBoss startup until the next time it is stopped. The output can be found
   in the JBoss console log instead.

TAG: loadadmin-5-0-0-8
DATE: 4/10/2012
STAFF: dbm
RELEASE:
CHANGES:
1) prod/fridaytasks.csh: don't reset/set public/robot namespaces

TAG: loadadmin-5-0-0-7
DATE: 4/6/2012
STAFF: dbm
RELEASE:
CHANGES:
1) prod/loadProdQS.csh: don't clear flag
2) dev/loadDevDB.csh: new - replaces load_prod_to_dev.csh

TAG: loadadmin-5-0-0-6
DATE: 4/4/2012
STAFF: dbm
RELEASE:
CHANGES:
1) Install: Don't try to change ownership of scripts on servers where there
            is no webster user

TAG: loadadmin-5-0-0-5 (duplicate of "-4" tag - not used)
TAG: loadadmin-5-0-0-4
DATE: 3/30/2012
STAFF: dbm
RELEASE:
CHANGES: Added scripts for updating IMSR counts (jsb)

TAG: loadadmin-5-0-0-3
DATE: 3/20/2012
STAFF: dbm
RELEASE:
CHANGES: Merge tr9993 branch to the trunk for 5.0 release

TAG: loadadmin-tr9993-BP
DATE: 2/2/2012
STAFF: dbm
RELEASE:
CHANGES: Branch point tag for 5.0

TAG: loadadmin-5-0-0-2
DATE: 1/30/2012
STAFF: dbm
CHANGES:
1) prod/genFrontend.csh: call new gen_webshare_prod
2) prod/load_prod_indexes.csh: call new gen_webshare_prod
